# marbles

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  classifiers.txt  dev-requirements.in  dev-requirements.txt  marbles.code-workspace  noxfile.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini  win-requirements.in  win-requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  devcontainer-ci.yml  documentation-links.yml  python-package.yml
ci/: build.sh  release.sh
docs/: Makefile  changelog.rst  comparisons.rst  conf.py  contributing.rst  core.rst  index.rst  install.rst  logging.rst  maintaining.rst  marbles.rst  mixins.rst  pandas-inv.txt  python-inv.txt  quickstart.rst  reference.rst  winning.rst
docs/examples/: custom_assertions.py  exclude_locals.py  exclude_locals.txt  extra_locals.py  extra_locals.txt  file.py  getting_started.py  getting_started.py.annotated  getting_started.py.dynamic  getting_started.py.original  getting_started.txt  getting_started.txt.annotated  getting_started.txt.dynamic  getting_started.txt.original  getting_started.txt.verbose  required_note.py  required_note.txt  severity.py  sla.py
examples/: file.py  filename.py  severity.py  sla.py
marbles/: __init__.py  _stack.py  _version.py  log.py  marbles.py  mixins.py
marbles/core/: .coveragerc  LICENSE  classifiers.txt  requirements.txt  setup.cfg  setup.py
marbles/core/example_packages/namespace_package/: setup.py
marbles/core/example_packages/namespace_package/namespace/: __init__.py
marbles/core/example_packages/namespace_package/namespace/core/: main.py
marbles/core/example_packages/namespace_package/tests/namespace/core/: test.py
marbles/core/example_packages/no_tests_package/: setup.py
marbles/core/example_packages/simple_package/: setup.py
marbles/core/example_packages/simple_package/tests/: test.py  test_two.py
marbles/core/marbles/: __init__.py  __main__.py  setuptools.py
marbles/core/marbles/core/: __init__.py  _stack.py  _version.py  log.py  main.py  marbles.py
marbles/core/tests/: test_log.py  test_main.py  test_marbles.py  test_setuptools.py
marbles/core/tests/examples/: example_error.py  example_marbles.py  example_unittest.py
marbles/mixins/: .coveragerc  LICENSE  MANIFEST.in  requirements.txt  setup.cfg  setup.py
marbles/mixins/marbles/: __init__.py
marbles/mixins/marbles/mixins/: __init__.py  _version.py  mixins.py
marbles/mixins/tests/: __init__.py  test_mixins.py
recipe/: marbles-core.sh  marbles-mixins.sh  meta.yaml
requirements/: base.in  base.txt  coverage.in  coverage.txt  dev.in  dev.txt  docs.in  docs.txt  lint.in  lint.txt  package.in  package.txt  windows.in  windows.txt
scripts/: collect-coverage.py  install-subpackages-if-needed.py  rmrf.py  upgrade-dependencies.sh
tests/: __init__.py  log.py  marbles.py  mixins.py
