[bumpversion]
current_version = 0.9.3
commit = True
tag = False

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]

[bumpversion:file:marbles/core/marbles/core/VERSION]

[bumpversion:file:marbles/mixins/marbles/mixins/VERSION]

[flake8]
exclude = 
	build/,
	docs/conf.py,
	*.eggs,
	.tox/
per-file-ignores = 
	marbles/mixins/marbles/mixins/mixins.py: E501
	marbles/mixins/tests/test_mixins.py: E501

[metadata]
description-file = README.rst
license_file = LICENSE

[bdist_wheel]
universal = 1

