[metadata]
name = marbles
version = 0.12.1
author = Jane Adams, Leif Walsh
author_email = jane@twosigma.com, leif@twosigma.com
url = https://github.com/twosigma/marbles
download_url = https://github.com/twosigma/marbles/archive/0.12.1.tar.gz
description = Read better test failures
long_description = file: README.rst
long_description_content_type = "text/x-rst; charset=UTF-8"
license = MIT
license_files = LICENSE
classifiers = file: classifiers.txt
project_urls =
    Documentation = https://marbles.readthedocs.io
    Source = https://github.com/twosigma/marbles
    Tracker = https://github.com/twosigma/marbles/issues

[options]
packages =
install_requires =
    marbles.core
    marbles.mixins

[bumpversion]
current_version = 0.12.1
commit = True
tag = False

[bumpversion:file:setup.cfg]

[bumpversion:file:marbles/core/marbles/core/VERSION]

[bumpversion:file:marbles/mixins/marbles/mixins/VERSION]

[flake8]
exclude =
    build/,
    marbles/core/build/,
    marbles/mixins/build/,
    docs/conf.py,
    *.eggs,
    .tox/,
    .venv/
per-file-ignores =
    marbles/mixins/marbles/mixins/mixins.py:E501
    marbles/mixins/tests/test_mixins.py:E501

[bdist_wheel]
universal = 1
