[metadata]
name = marbles.core
version = file: marbles/core/VERSION
author = Jane Adams, Leif Walsh
author_email = jane@twosigma.com, leif@twosigma.com
url = https://github.com/twosigma/marbles
download_url = https://github.com/twosigma/marbles/archive/0.12.1.tar.gz
description = A unittest extension that provides additional information on test failure
long_description = file: README.rst
long_description_content_type = "text/x-rst; charset=UTF-8"
license = MIT
license_files = LICENSE
classifiers = file: classifiers.txt
project_urls =
    Documentation = https://marbles.readthedocs.io
    Source = https://github.com/twosigma/marbles
    Tracker = https://github.com/twosigma/marbles/issues

[options]
packages =
    marbles
    marbles.core
namespace_packages =
    marbles

[options.entry_points]
distutils.commands =
    marbles = marbles.setuptools:MarblesTestCommand

[options.package_data]
marbles.core = VERSION

[flake8]
exclude =
    build/,
    *.eggs

[bdist_wheel]
universal = 1
