[metadata]
name = marbles.mixins
version = file: marbles/mixins/VERSION
author = Jane Adams, Leif Walsh
author_email = jane@twosigma.com, leif@twosigma.com
url = https://github.com/twosigma/marbles
download_url = https://github.com/twosigma/marbles/archive/0.12.3.tar.gz
description = Semantically-rich assertions for use in marbles and unittest test cases
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_files = LICENSE
classifiers = file: classifiers.txt
project_urls =
    Documentation = https://marbles.readthedocs.io
    Source = https://github.com/twosigma/marbles
    Tracker = https://github.com/twosigma/marbles/issues

[options]
packages =
    marbles.mixins
namespace_packages =
    marbles
install_requires =
    pandas<3,>=1

[options.package_data]
marbles.mixins = VERSION

[flake8]
exclude =
    build/,
    *.eggs

per-file-ignores =
    marbles/mixins/marbles/mixins/mixins.py:E501
    marbles/mixins/tests/test_mixins.py:E501

[bdist_wheel]
universal = 1
